--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "test": "mocha"
   },
+  "peerDependencies": {
+    "webpack": "3 || 4"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "lodash": "^4.17.5",
